# interact-demo

./: .eslintrc.cjs  .gitignore  .vercelignore  index.html  package.json  tailwind.config.js  vite.config.js
simdev/: Cargo.toml  release.sh
simdev/.cargo/: config.toml
simdev/src/: crypto.rs  lib.rs  main.rs  nostr.rs  preludes.rs  report.rs  rings.rs
src/: App.jsx  atoms.js  main.jsx
src/components/: AppColumn.jsx  Connection.jsx  Hero.jsx  Hero.module.css  LeftColumn.jsx  Nav.jsx  PageWrapper.jsx  SectionWrapper.jsx  StepSection.jsx  StyledButton.jsx  StyledButton.module.css
